--- a/ggg_board_game/pubspec.yaml
+++ b/ggg_board_game/pubspec.yaml
@@ -60,8 +60,10 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+   #  - assets
+    # - assets/tabere
+     #- assets/jucatori
+     #- assets/obstacole
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
