--- a/ggg_board_game/pubspec.yaml
+++ b/ggg_board_game/pubspec.yaml
@@ -59,11 +59,11 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-   #  - assets
-    # - assets/tabere
-     #- assets/jucatori
-     #- assets/obstacole
+  assets:
+    - assets/
+    - assets/tabere/
+    - assets/jucatori/
+    - assets/obstacole/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
